details row font-size and image align fixed

--- a/src/containers/VideoBGAndForm/VideoBGAndForm.css
+++ b/src/containers/VideoBGAndForm/VideoBGAndForm.css
@@ -79,6 +79,10 @@
     line-height: 17px;
 }
 
+.header-queryBox_field input {
+    font-size: 14px;
+}
+
 
 .header-queryBox_radiobutton label {
 
